--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mocha": "^2.3.3"
   },
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "morgan": "^1.6.1",
     "passport": "^0.3.2"
   }
 }
