--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "body-parser": "^1.14.1",
+    "compression": "^1.6.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "response-time": "^2.3.1"
   }
 }
