--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "compression": "^1.6.0",
+    "cookie-parser": "^1.4.0",
+    "cookie-session": "^1.2.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
