--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.0",
     "cookie-session": "^1.2.0",
     "express": "^4.13.3",
+    "helmet": "^0.14.0",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
