--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^1.14.1",
+    "bookshelf": "^0.9.1",
     "compression": "^1.6.0",
     "config": "^1.17.1",
     "cookie-parser": "^1.4.0",
@@ -25,6 +26,7 @@
     "express": "^4.13.3",
     "helmet": "^0.14.0",
     "isomorphic-fetch": "^2.2.0",
+    "knex": "^0.9.0",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
