--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bookshelf": "^0.9.1",
     "compression": "^1.6.0",
     "config": "^1.17.1",
+    "convict": "^1.0.1",
     "cookie-parser": "^1.4.0",
     "cookie-session": "^1.2.0",
     "express": "^4.13.3",
