--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pg": "^4.4.3",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
-    "response-time": "^2.3.1"
+    "response-time": "^2.3.1",
+    "sequelize": "^3.14.2",
+    "sequelize-cli": "^2.2.1"
   }
 }
